[gd_scene load_steps=5 format=2]

[ext_resource path="res://3.Assets/1.Art/Fondo-Men√∫.ogv" type="VideoStream" id=1]
[ext_resource path="res://2.Scripts/Menu.gd" type="Script" id=2]
[ext_resource path="res://3.Assets/2.Fonts/RobotoModMenu.tres" type="DynamicFont" id=3]
[ext_resource path="res://3.Assets/4.Sound/Button - Pop.ogg" type="AudioStream" id=4]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="VideoPlayer" type="VideoPlayer" parent="."]
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 567.0
stream = ExtResource( 1 )
autoplay = true

[node name="Label" type="Label" parent="."]
anchor_left = 0.485
anchor_top = 0.5
anchor_right = 0.485
anchor_bottom = 0.5
margin_left = -1198.2
margin_top = -876.0
margin_right = -662.2
margin_bottom = -758.0
custom_fonts/font = ExtResource( 3 )
text = "Carroots"
uppercase = true

[node name="Start" type="Button" parent="."]
anchor_left = 0.477
anchor_top = 0.442
anchor_right = 0.477
anchor_bottom = 0.442
margin_left = -1211.84
margin_top = -589.36
margin_right = -618.84
margin_bottom = -370.36
custom_fonts/font = ExtResource( 3 )
text = "Start"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Start"]
stream = ExtResource( 4 )

[node name="Quit" type="Button" parent="."]
margin_left = -296.0
margin_top = 148.0
margin_right = 297.0
margin_bottom = 367.0
custom_fonts/font = ExtResource( 3 )
text = "Quit"

[connection signal="button_down" from="Start" to="." method="_on_Start_button_down"]
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="button_down" from="Quit" to="." method="_on_Quit_button_down"]
